tests/func/fail001.ds
namespace std {

func f(x: i32, y: i32) -> i32;

func f(x: i32, y: i32) -> i64 {}

}
